[package]
name = "netflow_v9"
version = "0.2.1"
authors = ["Kris <versbinarii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/VersBinarii/netflow_v9"
keywords = ["netflow", "netflow-v9", "network"]
description = "Library for parsing Netflow-v9 packets"
categories = ["network-programming", "parser-implementations"]

[dependencies]
nom = "5.0"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"